--- a/app/src/main/res/layout/activity_note_page.xml
+++ b/app/src/main/res/layout/activity_note_page.xml
@@ -28,7 +28,7 @@
 
             <LinearLayout
                 android:id="@+id/layoutItems"
-                android:layout_width="411dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 tools:layout_editor_absoluteX="0dp"
