--- a/app/src/main/res/layout/activity_open_note_cell.xml
+++ b/app/src/main/res/layout/activity_open_note_cell.xml
@@ -20,7 +20,7 @@
     <TextView
         android:id="@+id/noteNametextView"
         android:clickable="false"
-        android:layout_width="328dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
         android:padding="15dp"
@@ -31,13 +31,14 @@
 
         <ImageButton
             android:id="@+id/openNoteImageButton"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
             android:layout_width="57dp"
             android:layout_height="57dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:backgroundTint="#ffffff"
+            android:background="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/noteNametextView"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/arrow" />
