--- a/app/src/main/res/layout/layout_checklist_cell.xml
+++ b/app/src/main/res/layout/layout_checklist_cell.xml
@@ -22,16 +22,17 @@
         <ImageButton
             android:id="@+id/menuButton"
             android:layout_width="31dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="372dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="57dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:elevation="2dp"
-            android:src="@drawable/optionsmenu"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
 
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/optionsmenu"/>
 
 
         <RelativeLayout
@@ -62,7 +63,7 @@
 
         <LinearLayout
             android:id="@+id/buttonLayout"
-            android:layout_width="411dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/border"
@@ -73,7 +74,8 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginBottom="2dp"
-                android:layout_marginStart="312dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="35dp"
                 android:layout_marginTop="2dp"
                 android:backgroundTint="#ffffff"
                 android:src="@drawable/addsmall"
