--- a/app/src/main/res/layout/layout_checklist_item.xml
+++ b/app/src/main/res/layout/layout_checklist_item.xml
@@ -13,9 +13,9 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="125dp"
+        android:layout_width="wrap_content"
         android:layout_height="53dp"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="20dp"
         android:focusable="true"
         android:clickable="true"
         android:scaleX="2"
@@ -25,15 +25,14 @@
 
     <EditText
         android:id="@+id/editTextCheckBox"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
         android:hint="Note"
         android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/checkBox"
         app:layout_constraintTop_toTopOf="parent" />
 
 
