--- a/app/src/main/res/layout/layout_image_cell.xml
+++ b/app/src/main/res/layout/layout_image_cell.xml
@@ -22,18 +22,29 @@
         <ImageButton
             android:id="@+id/menuButton"
             android:layout_width="31dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="372dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="57dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:elevation="2dp"
-            android:src="@drawable/optionsmenu"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+
             app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"/>
-
-
-
+            app:srcCompat="@drawable/optionsmenu"/>
+<!--        <ImageButton-->
+<!--            android:id="@+id/menuButton"-->
+<!--            android:layout_width="31dp"-->
+<!--            android:layout_height="52dp"-->
+<!--            android:layout_marginStart="372dp"-->
+<!--            android:layout_marginTop="4dp"-->
+<!--            android:background="@android:color/transparent"-->
+<!--            android:elevation="2dp"-->
+<!--            android:src="@drawable/optionsmenu"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            style="?android:attr/borderlessButtonStyle"/>-->
 
 
         <ImageView
@@ -49,15 +60,19 @@
             android:padding="5dp"
             android:src="@drawable/emptyimage"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:layout_editor_absoluteX="-54dp" />
 
         <Button
             android:id="@+id/buttonImageFromCamera"
             android:layout_width="129dp"
             android:layout_height="65dp"
-            android:layout_marginStart="224dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="40dp"
             android:layout_marginTop="96dp"
             android:text="Add Image from Camera"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
