--- a/app/src/main/res/layout/layout_image_cell_title.xml
+++ b/app/src/main/res/layout/layout_image_cell_title.xml
@@ -18,32 +18,44 @@
 
 
 
+        <EditText
+            android:id="@+id/editTextTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:clipToPadding="false"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:ems="10"
+            android:hint="Title"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageButton
             android:id="@+id/menuButton"
             android:layout_width="31dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="372dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="57dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:elevation="2dp"
-            android:src="@drawable/optionsmenu"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"/>
+            app:srcCompat="@drawable/optionsmenu"/>
 
-        <EditText
-            android:id="@+id/editTextTitle"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:singleLine="true"
-            android:maxLines="1"
-
-            android:ems="10"
-
-            android:text="Title"
-            app:layout_constraintStart_toStartOf="parent"
+        <TextView
+            android:id="@+id/DateTimeCreated"
+            android:layout_width="134dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
+            android:text="TextView"
+            app:layout_constraintStart_toEndOf="@+id/editTextTitle"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -79,21 +91,17 @@
             android:id="@+id/buttonImageFromCamera"
             android:layout_width="129dp"
             android:layout_height="65dp"
-            android:layout_marginStart="232dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="40dp"
             android:layout_marginTop="148dp"
             android:text="Add Image from Camera"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/DateTimeCreated"
-            android:layout_width="134dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="16dp"
-            android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/editTextTitle"
-            app:layout_constraintTop_toTopOf="parent" />
+
 
 
 
