--- a/app/src/main/res/layout/layout_note_cell.xml
+++ b/app/src/main/res/layout/layout_note_cell.xml
@@ -31,18 +31,22 @@
 <!--            app:layout_constraintStart_toStartOf="parent"-->
 <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
+
+
         <ImageButton
             android:id="@+id/menuButton"
             android:layout_width="31dp"
-            android:layout_height="52dp"
-            android:layout_marginStart="372dp"
-            android:layout_marginTop="4dp"
+            android:layout_height="57dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:background="@android:color/transparent"
             android:elevation="2dp"
-            android:src="@drawable/optionsmenu"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+
             app:layout_constraintTop_toTopOf="parent"
-            style="?android:attr/borderlessButtonStyle"/>
+            app:srcCompat="@drawable/optionsmenu"/>
 
 
 
@@ -62,7 +66,7 @@
 
         <TextView
             android:id="@+id/DateTimeCreated"
-            android:layout_width="134dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="28dp"
             android:layout_marginTop="16dp"
