--- a/app/src/main/res/layout/layout_note_cell_title.xml
+++ b/app/src/main/res/layout/layout_note_cell_title.xml
@@ -31,35 +31,37 @@
             tools:layout_editor_absoluteY="2dp">
 
             <EditText
-                android:id="@+id/editTextTitle"
-                android:layout_width="200dp"
-                android:layout_height="40dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:clipToPadding="false"
-                android:singleLine="true"
-                android:maxLines="1"
+            android:id="@+id/editTextTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:clipToPadding="false"
+            android:singleLine="true"
+            android:maxLines="1"
 
-                android:ems="10"
+            android:ems="10"
 
-                android:hint="Title"
-                android:text=""
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:hint="Title"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/menuButton"
-                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="31dp"
-                android:layout_height="52dp"
-                android:layout_marginStart="372dp"
-                android:layout_marginTop="4dp"
+                android:layout_height="57dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:elevation="2dp"
-                android:src="@drawable/optionsmenu"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/optionsmenu"/>
 
             <TextView
                 android:id="@+id/DateTimeCreated"
